<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonVolver2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="54dp"
        android:background="@android:drawable/ic_menu_revert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="16dp"
        android:text="@string/Gastos"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonModGastos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="26dp"
        android:text="@string/Modificar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/buttonInsGastos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="22dp"
        android:text="@string/insertar"
        app:layout_constraintEnd_toStartOf="@+id/buttonBorGastos"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/buttonBorGastos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="33dp"
        android:text="@string/borrar"
        app:layout_constraintBottom_toTopOf="@+id/buttonMostGastos"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonMostGastos"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/mostrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonInsGastos" />

    <EditText
        android:id="@+id/editTextID"
        android:layout_width="70dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="ID  "
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMostGastos" />

    <EditText
        android:id="@+id/editTextMatriculaGastos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="82dp"
        android:ems="10"
        android:hint="@string/Matrícula"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextID"
        app:layout_constraintTop_toBottomOf="@+id/buttonMostGastos" />

    <EditText
        android:id="@+id/editTextConcepto"
        android:layout_width="186dp"
        android:layout_height="46dp"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="@string/Concepto"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/ListaGastos"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextValor"
        android:layout_width="186dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="@string/Valor"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/ListaGastos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextConcepto" />

    <ListView
        android:id="@+id/ListaGastos"
        android:layout_width="409dp"
        android:layout_height="367dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>