<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9CEEF8">

    <Button
        android:id="@+id/buttonMosCoches2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:text="json"
        android:textColor="@drawable/txt_btn"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonMosCoches3"
        app:layout_constraintStart_toStartOf="@+id/buttonModCoches" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="28dp"
        android:fontFamily="casual"
        android:text="@string/Coches"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMosCoches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:text="CSV"
        android:textColor="@drawable/txt_btn"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonMosCoches3"
        app:layout_constraintStart_toStartOf="@+id/buttonBorCoches" />

    <Button
        android:id="@+id/buttonInsCoches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/btn"
        android:text="@string/insertar"
        android:textColor="@drawable/txt_btn"
        app:layout_constraintEnd_toStartOf="@+id/buttonBorCoches"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonMosCoches3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn"
        android:text="XML"
        android:textColor="@drawable/txt_btn"
        app:layout_constraintStart_toStartOf="@+id/buttonInsCoches"
        app:layout_constraintTop_toBottomOf="@+id/buttonInsCoches" />

    <Button
        android:id="@+id/buttonBorCoches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/btn"
        android:text="@string/borrar"
        android:textColor="@drawable/txt_btn"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonInsCoches"
        app:layout_constraintEnd_toEndOf="@+id/buttonVolver" />

    <Button
        android:id="@+id/buttonModCoches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:text="@string/Modificar"
        android:textColor="@drawable/txt_btn"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonInsCoches"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <ListView
        android:id="@+id/ListaCoches"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMarca" />

    <Button
        android:id="@+id/buttonVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="54dp"
        android:background="@android:drawable/ic_menu_revert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextMatrCoches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:hint="@string/Matrícula"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/editTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMosCoches2" />

    <EditText
        android:id="@+id/editTextMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/Marca"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMatrCoches" />

    <EditText
        android:id="@+id/editTextColor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:hint="color"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextMarca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextMatrCoches"
        app:layout_constraintTop_toBottomOf="@+id/buttonMosCoches" />
</androidx.constraintlayout.widget.ConstraintLayout>